kubernetes-microservices/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /books
        pathType: Prefix
        backend:
          service:
            name: book-service
            port:
              number: 8001
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8000
